--- a/form/form.fxml
+++ b/form/form.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
+<?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -8,15 +10,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<GridPane alignment="center" hgap="10" prefHeight="337.0" prefWidth="350.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="form.Controller">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
-   <children>
-      <Button mnemonicParsing="false" onAction="#drawButtonClicked" text="Button" />
-   </children>
-</GridPane>
+<SplitPane dividerPositions="0.7892976588628763" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="form.Controller">
+  <items>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+         <children>
+            <Canvas fx:id="drawCanvas" height="398.0" onMousePressed="#mouseClicked" width="469.0" />
+         </children></AnchorPane>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+         <children>
+            <Button layoutX="14.0" layoutY="117.0" mnemonicParsing="false" onAction="#rectangleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="RECTANGLE" />
+            <Button layoutX="14.0" layoutY="156.0" mnemonicParsing="false" onAction="#circleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="CIRCLE" />
+         </children></AnchorPane>
+  </items>
+</SplitPane>
