--- a/form/form.fxml
+++ b/form/form.fxml
@@ -20,6 +20,7 @@
          <children>
             <Button layoutX="14.0" layoutY="117.0" mnemonicParsing="false" onAction="#rectangleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="RECTANGLE" />
             <Button layoutX="14.0" layoutY="156.0" mnemonicParsing="false" onAction="#circleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="CIRCLE" />
+            <Button layoutX="14.0" layoutY="199.0" mnemonicParsing="false" onAction="#lineButtonClicked" prefHeight="25.0" prefWidth="96.0" text="LINE" />
          </children></AnchorPane>
   </items>
 </SplitPane>
