Added more shapes and hierarchy

--- a/form/form.fxml
+++ b/form/form.fxml
@@ -18,9 +18,13 @@
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <Button layoutX="14.0" layoutY="117.0" mnemonicParsing="false" onAction="#rectangleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="RECTANGLE" />
-            <Button layoutX="14.0" layoutY="156.0" mnemonicParsing="false" onAction="#circleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="CIRCLE" />
-            <Button layoutX="14.0" layoutY="199.0" mnemonicParsing="false" onAction="#lineButtonClicked" prefHeight="25.0" prefWidth="96.0" text="LINE" />
+            <Button layoutX="14.0" layoutY="85.0" mnemonicParsing="false" onAction="#rectangleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="RECTANGLE" />
+            <Button layoutX="14.0" layoutY="124.0" mnemonicParsing="false" onAction="#circleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="CIRCLE" />
+            <Button layoutX="14.0" layoutY="167.0" mnemonicParsing="false" onAction="#lineButtonClicked" prefHeight="25.0" prefWidth="96.0" text="LINE" />
+            <Button layoutX="14.0" layoutY="205.0" mnemonicParsing="false" onMousePressed="#triangleButtonClicked" prefHeight="25.0" prefWidth="96.0" text="TRIANGLE" />
+            <Button layoutX="14.0" layoutY="248.0" mnemonicParsing="false" onMousePressed="#ellipseButtonClicked" prefHeight="25.0" prefWidth="96.0" text="ELLIPSE" />
+            <Button layoutX="14.0" layoutY="288.0" mnemonicParsing="false" onMousePressed="#rhombusButtonClicked" prefHeight="25.0" prefWidth="96.0" text="RHOMBUS" />
+            <Button layoutX="14.0" layoutY="328.0" mnemonicParsing="false" onMousePressed="#squareButtonClicked" prefHeight="25.0" prefWidth="96.0" text="SQUARE" />
          </children></AnchorPane>
   </items>
 </SplitPane>
