--- a/form/form.fxml
+++ b/form/form.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<SplitPane dividerPositions="0.7892976588628763" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="form.Controller">
+<SplitPane dividerPositions="0.7892976588628763" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="957.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="form.Controller">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <Canvas fx:id="drawCanvas" height="398.0" onMousePressed="#mousePressed" onMouseReleased="#mouseReleased" width="469.0" />
+            <Canvas fx:id="drawCanvas" height="621.0" onMouseDragged="#mouseDragged" onMousePressed="#mousePressed" onMouseReleased="#mouseReleased" width="751.0" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
@@ -25,6 +25,8 @@
             <Button layoutX="14.0" layoutY="248.0" mnemonicParsing="false" onMousePressed="#ellipseButtonClicked" prefHeight="25.0" prefWidth="96.0" text="ELLIPSE" />
             <Button layoutX="14.0" layoutY="288.0" mnemonicParsing="false" onMousePressed="#rhombusButtonClicked" prefHeight="25.0" prefWidth="96.0" text="RHOMBUS" />
             <Button layoutX="14.0" layoutY="328.0" mnemonicParsing="false" onMousePressed="#squareButtonClicked" prefHeight="25.0" prefWidth="96.0" text="SQUARE" />
+            <Button layoutX="36.0" layoutY="480.0" mnemonicParsing="false" onAction="#clearButtonClicked" text="CLEAR" />
+            <Button layoutX="36.0" layoutY="532.0" mnemonicParsing="false" onAction="#undoButtonClicked" text="UNDO" />
          </children></AnchorPane>
   </items>
 </SplitPane>
